--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "jquery": "^3.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-image-lightbox": "^5.1.1",
+    "react-medium-image-zoom": "^4.3.0",
+    "react-modal": "^3.11.2",
+    "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-scroll-up-button": "^1.6.4"
+    "react-scroll-up-button": "^1.6.4",
+    "simple-react-lightbox": "^2.7.3-2",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
