--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "react-scripts": "3.4.1",
     "react-scroll-up-button": "^1.6.4",
     "simple-react-lightbox": "^2.7.3-2",
-    "yarn": "^1.22.4"
+    "yarn": "^1.22.4",
+    "homepage": "http://zhouzhuang.github.io/CS185-react"
+
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
