--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zhouzhuang.github.io/CS185-react",
+  "homepage": "https://zhouzhuang.github.io/CS185-react/",
   "name": "recwebsite",
   "version": "0.1.0",
   "private": true,
