--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.14.2",
+    "framer-motion": "^1.10.3",
     "jquery": "^3.5.0",
+    "radio": "^0.2.0",
+    "radio-button": "0.0.2",
+    "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -15,9 +22,12 @@
     "react-medium-image-zoom": "^4.3.0",
     "react-modal": "^3.11.2",
     "react-modal-image": "^2.5.0",
+    "react-radio-buttons": "^1.2.2",
+    "react-redux-firebase": "^3.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll-up-button": "^1.6.4",
+    "redux-firestore": "^0.13.0",
     "simple-react-lightbox": "^2.7.3-2",
     "yarn": "^1.22.4"
   },
