--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll-up-button": "^1.6.4",
+    "react-scrollbar": "^0.5.6",
+    "react-select": "^3.1.0",
     "redux-firestore": "^0.13.0",
+    "scroll": "^3.0.1",
     "simple-react-lightbox": "^2.7.3-2",
     "yarn": "^1.22.4"
   },
