add movie gallery

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ag-grid-community": "^23.1.1",
+    "ag-grid-react": "^23.1.1",
+    "axios": "^0.19.2",
     "firebase": "^7.14.2",
     "framer-motion": "^1.10.3",
     "jquery": "^3.5.0",
@@ -18,7 +21,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-dom-factories": "^1.0.2",
+    "react-grid-gallery": "^0.5.5",
     "react-image-lightbox": "^5.1.1",
+    "react-imagebox": "^2.0.0",
+    "react-justified-grid": "^1.0.0",
     "react-medium-image-zoom": "^4.3.0",
     "react-modal": "^3.11.2",
     "react-modal-image": "^2.5.0",
@@ -58,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "fslightbox-react": "^1.4.9",
     "gh-pages": "^2.2.0"
   }
 }
