--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "react-medium-image-zoom": "^4.3.0",
     "react-modal": "^3.11.2",
     "react-modal-image": "^2.5.0",
+    "react-onclickoutside": "^6.9.0",
     "react-radio-buttons": "^1.2.2",
     "react-redux-firebase": "^3.4.0",
+    "react-responsive-modal": "^5.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll-up-button": "^1.6.4",
     "react-scrollbar": "^0.5.6",
     "react-select": "^3.1.0",
+    "react-widgets": "^4.5.0",
+    "reactjs-popup": "^1.5.0",
     "redux-firestore": "^0.13.0",
     "scroll": "^3.0.1",
     "simple-react-lightbox": "^2.7.3-2",
