--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ag-grid-community": "^23.1.1",
     "ag-grid-react": "^23.1.1",
     "axios": "^0.19.2",
+    "d3": "^5.16.0",
     "firebase": "^7.14.2",
     "framer-motion": "^1.10.3",
     "jquery": "^3.5.0",
@@ -20,6 +21,7 @@
     "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.13.1",
     "react-dom-factories": "^1.0.2",
     "react-grid-gallery": "^0.5.5",
